File upload is now working, progress bar is not showing

--- a/client/app/templates/video-upload.component.html
+++ b/client/app/templates/video-upload.component.html
@@ -11,8 +11,8 @@
 			        </div>
 		        </div>
 		        <div [hidden]="!uploadStarted">
-			        <div id="ProgressContainer"><div id="ProgressBar"></div></div><span id="percent">{{ progress }}</span>
-			        <span id='Uploaded'>Uploaded: {{ calculateFileSize() }} MB</span>  
+			        <div id="ProgressContainer"><div id="ProgressBar">{{progress}}</div></div><span id="percent">{{percent}} %</span>
+			        <span id='Uploaded'>Uploaded: {{calculateFileSize()}} MB</span>  
 		        </div>
 		    </span>
 		</div>
