--- a/client/app/templates/video-upload.component.html
+++ b/client/app/templates/video-upload.component.html
@@ -4,7 +4,7 @@
 		    <h2>Node.js file uploader</h2>
 		    <span id="UploadArea">
 		        <div [hidden]="uploadStarted">
-			        <label for="FileBox">Choose a file: </label><input type="file" class="form-control" (change)="onFileChosen($event)" id="FileBox">
+			        <label for="FileBox">Choose a file: </label><input type="file" #file class="form-control" (change)="onFileChosen(file)" id="FileBox">
 			        <label for="NameBox">Name: </label><input type="text" [(ngModel)]="fileName" class="form-control" id="NameBox"><br>
 			        <div class="text-center">
 			        	<button  type="button" id="UploadButton" (click)="startUpload()" class="btn btn-info">Upload</button>
