Progress is now showing, socket.io reimplemented as injectable service, added binds on callbacks

--- a/client/app/templates/video-upload.component.html
+++ b/client/app/templates/video-upload.component.html
@@ -12,7 +12,7 @@
 		        </div>
 		        <div [hidden]="!uploadStarted">
 			        <div id="ProgressContainer"><div id="ProgressBar">{{progress}}</div></div><span id="percent">{{percent}} %</span>
-			        <span id='Uploaded'>Uploaded: {{calculateFileSize()}} MB</span>  
+			        <span id='Uploaded'>Uploaded: {{progressInMB}} MB</span>  
 		        </div>
 		    </span>
 		</div>
