Custom Angular 2 progress bar, renaming from video-upload to file-upload component

--- a/client/app/templates/file-upload.component.html
+++ b/client/app/templates/file-upload.component.html
@@ -11,6 +11,7 @@
 			        </div>
 		        </div>
 		        <div [hidden]="!uploadStarted">
+		        <progressbar [animate]="true" [value]="percent" [type]="type"><b>{{percent}}%</b></progressbar>
 			        <div id="ProgressContainer"><div id="ProgressBar">{{progress}}</div></div><span id="percent">{{percent}} %</span>
 			        <span id='Uploaded'>Uploaded: {{progressInMB}} MB</span>  
 		        </div>
