--- a/client/app/templates/file-upload.component.html
+++ b/client/app/templates/file-upload.component.html
@@ -1,21 +1,21 @@
 <div class="container">
 	<div class="row">
 		<div id="UploadBox" class="form-group">
-		    <h2>Node.js file uploader</h2>
-		    <span id="UploadArea">
-		        <div [hidden]="uploadStarted">
-			        <label for="FileBox">Choose a file: </label><input type="file" #fileInput class="form-control" (change)="onFileChosen(fileInput)" id="FileBox">
-			        <label for="NameBox">Name: </label><input type="text" [(ngModel)]="fileName" class="form-control" id="NameBox"><br>
-			        <div class="text-center">
-			        	<button  type="button" id="UploadButton" (click)="startUpload()" class="btn btn-info">Upload</button>
-			        </div>
-		        </div>
-		        <div [hidden]="!uploadStarted">
-		        <progressbar [animate]="true" [value]="percent" [type]="type"><b>{{percent}}%</b></progressbar>
-			        <div id="ProgressContainer"><div id="ProgressBar">{{progress}}</div></div><span id="percent">{{percent}} %</span>
-			        <span id='Uploaded'>Uploaded: {{progressInMB}} MB</span>  
-		        </div>
-		    </span>
-		</div>
+			<h2>Node.js file uploader</h2>
+			<span id="UploadArea">
+				<div [hidden]="uploadStarted">
+					<label for="FileBox">Choose a file: </label><input type="file" #fileInput class="form-control" (change)="onFileChosen(fileInput)" id="FileBox">
+					<label for="NameBox">Name: </label><input type="text" [(ngModel)]="fileName" class="form-control" id="NameBox" ngDisabled="true"><br>
+					<div class="text-center">
+						<button  type="button" id="UploadButton" (click)="startUpload()" class="btn btn-info">Upload</button>
+					</div>
+				</div>
+				<div [hidden]="!uploadStarted">
+				<progressbar [animate]="true" [value]="progress" [type]="type"><b>{{progress | number:'.0-2'}}%</b></progressbar>
+				<div id="ProgressContainer"><div id="ProgressBar">{{progress | number:'.0-2'}}</div></div><span id="percent">{{progress | number:'.0-2'}} %</span>
+				<span id='Uploaded'>Uploaded: {{(((progress*100) * (fileToUpload == null ? 1 : fileToUpload.size)) / 10485760) | number:'.0-1'}} MB</span>
+			</div>
+		</span>
 	</div>
+</div>
 </div>
