--- a/client/app/templates/file-upload.component.html
+++ b/client/app/templates/file-upload.component.html
@@ -1,21 +1,39 @@
 <div class="container">
 	<div class="row">
-		<div id="UploadBox" class="form-group">
+		<div id="upload_box" class="form-group">
 			<h2>Node.js file uploader</h2>
-			<span id="UploadArea">
+			<span id="upload_area">
 				<div [hidden]="uploadStarted">
-					<label for="FileBox">Choose a file: </label><input type="file" #fileInput class="form-control" (change)="onFileChosen(fileInput)" id="FileBox">
-					<label for="NameBox">Name: </label><input type="text" [(ngModel)]="fileName" class="form-control" id="NameBox" ngDisabled="true"><br>
-					<div class="text-center">
-						<button  type="button" id="UploadButton" (click)="startUpload()" class="btn btn-info">Upload</button>
-					</div>
+					<label for="file_box">Choose a file: </label><input type="file" #fileInput class="form-control" (change)="onFileChosen(fileInput)" id="file_box" multiple>
 				</div>
-				<div [hidden]="!uploadStarted">
-				<progressbar [animate]="true" [value]="progress" [type]="type"><b>{{progress | number:'.0-2'}}%</b></progressbar>
-				<div id="ProgressContainer"><div id="ProgressBar">{{progress | number:'.0-2'}}</div></div><span id="percent">{{progress | number:'.0-2'}} %</span>
-				<span id='Uploaded'>Uploaded: {{(((progress*100) * (fileToUpload == null ? 1 : fileToUpload.size)) / 10485760) | number:'.0-1'}} MB</span>
-			</div>
-		</span>
+				<h2>Files to upload</h2>
+				<ul style="list-style-type:none">
+					<!-- #file is deprecated in new angular beta 17, let file of files is recommended, but is it throwing errors 
+					    in browsers -->
+					<li *ngFor="#file of files | values">
+						<div class="row">
+							<p>File name: {{file.File.name}}</p>
+							<div [hidden]="!uploadStarted">
+								<progressbar [animate]="true" [value]="file.Progress" [type]="type">
+									<b>{{file.Progress | number:'.0-2'}}%</b>
+								</progressbar>
+								<div id="progress_container">
+									<div id="progress_bar">
+										{{file.Progress | number:'.0-2'}}
+									</div>
+									<span id="percent">{{file.Progress | number:'.0-2'}} %</span>
+									<span id="uploaded">
+										Uploaded: {{(((file.Progress*100) * (file.File == null ? 1 : file.File.size)) / 10485760) | number}} MB
+									</span>
+								</div>
+							</div>
+						</div>
+					</li>
+				</ul>
+				<div class="text-center">
+					<button  type="button" id="upload_button" (click)="startUpload()" class="btn btn-info">Upload files</button>
+				</div>
+			</span>
+		</div>
 	</div>
-</div>
 </div>
