File progress is now kept on every page refresh, drag and drop for files implemented

--- a/client/app/templates/file-upload.component.html
+++ b/client/app/templates/file-upload.component.html
@@ -40,7 +40,7 @@
 					<div class="text-center" [hidden]='statusMessage == ""'>
 						<button  type="button" id="reset_form_button" (click)="resetForm()" class="btn btn-success">Upload new files</button>
 					</div>
-					<div class="text-center" [hidden]='statusMessage != ""'>
+					<div class="text-center" [hidden]='statusMessage != "" || uploadStarted'>
 						<button  type="button" id="upload_button" (click)="startUpload()" class="btn btn-info">Upload files</button>
 					</div>
 				</div>
