--- a/client/app/templates/file-upload.component.html
+++ b/client/app/templates/file-upload.component.html
@@ -9,7 +9,7 @@
 				<h2> Files to upload</h2>
 				<div style="width: 100%;height: 500px;overflow: auto;">
 				<ul style="list-style-type:none">
-					<li *ngFor="let fileData of files | values">
+					<li *ngFor="let fileData of files | values | reverse">
 						<div class="row">
 						    <div style="display: inline-block;">
 						    	<p>File name: {{fileData.file.name}}</p>
